# AIDA-2157-A-Final-Project

./: .gitignore  LLM_model_creation_prompt.md  README.md  app.py  briefings.py  data_generator.py  db.py  docker_sql_start.py  models.py  pyproject.toml  server.py  test_odbc.py
static/: app.js  style.css
templates/: index.html
