[project]
name = "aida2157a-final"
version = "0.1.0"
description = "aida2157a Final project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "faker>=40.12.0",
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyodbc>=5.3.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
]
